// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AccountBox /> should render a disabled button when the form is invalid 1`] = `
<Panel
  bsClass="panel"
  bsStyle="default"
  defaultExpanded={false}
  footer={
    <Button
      active={false}
      block={false}
      bsClass="btn"
      bsStyle="primary"
      className="col-sm-offset-4"
      disabled={true}
      id="edit-account-profile-button"
      onClick={[Function]}
    >
      Enregistrer les modifications
    </Button>
  }
  header="Mon compte"
>
  <Connect(ReduxForm) />
  <Connect(ConfirmPasswordModal) />
</Panel>
`;

exports[`<AccountBox /> should render a disabled button when the form is submitting 1`] = `
<Panel
  bsClass="panel"
  bsStyle="default"
  defaultExpanded={false}
  footer={
    <Button
      active={false}
      block={false}
      bsClass="btn"
      bsStyle="primary"
      className="col-sm-offset-4"
      disabled={true}
      id="edit-account-profile-button"
      onClick={[Function]}
    >
      Chargement...
    </Button>
  }
  header="Mon compte"
>
  <Connect(ReduxForm) />
  <Connect(ConfirmPasswordModal) />
</Panel>
`;

exports[`<AccountBox /> should render and enabled button when the form is valid 1`] = `
<Panel
  bsClass="panel"
  bsStyle="default"
  defaultExpanded={false}
  footer={
    <Button
      active={false}
      block={false}
      bsClass="btn"
      bsStyle="primary"
      className="col-sm-offset-4"
      disabled={false}
      id="edit-account-profile-button"
      onClick={[Function]}
    >
      Enregistrer les modifications
    </Button>
  }
  header="Mon compte"
>
  <Connect(ReduxForm) />
  <Connect(ConfirmPasswordModal) />
</Panel>
`;
